# site

./: .gitignore  BUILD.bazel  CNAME  Makefile  WORKSPACE  config.toml  config.yaml  go.mod  go.sum
cmd/site/: BUILD.bazel  main.go  update.go
content/: BUILD.bazel
content/about/: BUILD.bazel  index.md
content/posts/: BUILD.bazel  avoid-docker.md  avoid-docker.rst  bazel-with-grpc-go.md  bazel-with-grpc-go.rst  go-and-bazel.md  go-and-bazel.rst  homecluster.md  homecluster.rst  integration-test-with-bazel.md  integration-test-with-bazel.rst  monorepo-with-bazel.md  monorepo-with-bazel.rst  tips-on-bazel.md  tips-on-bazel.rst  tips-to-building-web-server-with-go.md  tips-to-building-web-server-with-go.rst  vendoring-dependent-libraries.md  vendoring-dependent-libraries.rst
content/posts/advertise-external-ip-by-bgp-from-metallb/: index.md  index.rst
content/posts/all-in-notion/: index.md
content/posts/api-for-ios-shortcuts/: index.md
content/posts/back-to-1password/: index.md
content/posts/back-to-hhkb/: index.md
content/posts/building-sapling-on-macports/: index.md
content/posts/bye-ipad-air4-hello-ipad-pro/: index.md
content/posts/code-search-for-myself/: index.md
content/posts/colorful-darcula/: index.md
content/posts/container-image-for-bazel/: index.md
content/posts/define-the-kubernetes-api-by-protocol-buffers/: index.md
content/posts/do-not-break-compatibility-in-the-minor-version/: index.md
content/posts/dont-leave-the-yubikey-plugged-in/: index.md
content/posts/factorio-headless/: cpu.py  index.md  index.rst  mem.py
content/posts/for-developer-experience/: index.md
content/posts/gocon-20-sendai/: index.md  index.rst
content/posts/how-to-deal-with-the-secret-in-gitops/: index.md
content/posts/how-to-organize-mono-repository/: index.md
content/posts/i-bought-access-point-wifi6-long-range/: index.md
content/posts/i-bought-unifi-dream-machine-pro/: index.md
content/posts/improve-working-env-at-home/: index.md  index.rst
content/posts/kernel-module-of-wireguard-on-udm/: index.md
content/posts/loadbalancer-for-kube-apiserver/: index.md  index.rst
content/posts/made-ci-tool/: index.md  index.rst
content/posts/mentoring-rookies/: index.md
content/posts/move-to-gentoo-linux/: index.md
content/posts/move-to-tagged-vlan/: index.md
content/posts/new-kernel-for-udm/: index.md
content/posts/notion-as-the-editor-for-blog/: index.md
content/posts/raspberry-pi-4-for-k8s-master/: index.md  index.rst
content/posts/regain-productivity/: index.md
content/posts/relationship-between-the-star-and-quality-in-github-repository/: index.md
content/posts/release-new-firmware-1,10.0-for-dream-machine/: index.md
content/posts/ssh-tool/: index.md  index.rst
content/posts/subaru-recalls-wrx-sti-due-to-problem-of-reverse-light-switch/: index.md
content/posts/switched-back-to-kinesis-advantage2/: index.md
content/posts/tdf-2020-calendar/: index.md  index.rst
content/posts/tdf-2021-calendar/: index.md
content/posts/tdf-2022-calendar/: index.md
content/posts/test-notion-api/: index.md
content/posts/unifi-switch-gen2/: index.md
content/posts/update-firmware-v1.9.0-on-unifi-dream-machine-pro/: index.md
content/posts/update-kubernetes-to-1.21/: index.md
content/posts/update-to-kubernetes-v1.24.3-and-ubuntu-22.04/: index.md
content/posts/update-ubuntu-20.04/: index.md  index.rst
content/posts/upgrade-macos-to-bigsur/: index.md
content/posts/using-the-security-key-for-ssh-auth-in-github/: index.md
content/posts/visualize-metrics-from-prometheus/: index.md  index.rst
content/posts/vpn-with-wireguard/: index.md  index.rst
content/posts/wireguard-and-unifi-controller/: index.md  index.rst
content/posts/y-mobile-on-ipad-air/: index.md
internal/content/: BUILD.bazel  article.go  article_test.go  content.go  content_test.go
internal/content/testdata/: article.md  article_without_lastmod.md
pkg/cmd/site/: BUILD.bazel  cmd.go
pkg/content/: BUILD.bazel  article.go  article_test.go  content.go  content_test.go
static/css/: override.css  syntax.css
themes/hugo_theme_pickles/layouts/_default/: list.html
themes/hugo_theme_pickles/layouts/partials/: header.html
themes/pickles/: BUILD.bazel
themes/pickles/layouts/_default/: single.html
themes/pickles/layouts/partials/: head.html  head_custom.html  recent.html  related.html
