# gazelle:proto disable_global
# gazelle:prefix github.com/f110/site

load("@dev_f110_rules_extras//go:vendor.bzl", "go_vendor")

go_vendor(name = "vendor")

load("@build_stack_rules_hugo//hugo:rules.bzl", "hugo_site")

hugo_site(
    name = "site",
    config = "config.yaml",
    content = [
        "//content/about:files",
        "//content/posts:files",
    ],
    hugo = select({
        "@io_bazel_rules_go//go/platform:linux_amd64": "@hugo//:hugo",
        "@io_bazel_rules_go//go/platform:darwin_arm64": "@hugo_darwin_arm64//:hugo",
    }),
    layouts = glob(["layouts/**"]),
    quiet = False,
    static = glob(["static/**"]),
    theme = "//themes/pickles",
    verbose = True,
)

load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "site_tar",
    srcs = [":site"],
    files = {
        ":CNAME": "site/CNAME",
    },
)
