load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "site_lib",
    srcs = ["main.go"],
    importpath = "github.com/f110/site/cmd/site",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cmd/site",
        "//vendor/github.com/spf13/cobra",
    ],
)

go_binary(
    name = "site",
    embed = [":site_lib"],
    visibility = ["//visibility:public"],
)
