load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "site_lib",
    srcs = [
        "main.go",
        "update.go",
    ],
    importpath = "github.com/f110/site/cmd/site",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/content",
        "//vendor/github.com/spf13/cobra",
        "//vendor/go.f110.dev/notion-api/v3:notion-api",
        "//vendor/go.f110.dev/xerrors",
        "//vendor/golang.org/x/oauth2",
    ],
)

go_binary(
    name = "site",
    embed = [":site_lib"],
    visibility = ["//visibility:public"],
)
